--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <title>HyperCat Developer</title>
+  <meta name="description" content="HyperCat IoT Developer" />
+  <style>#ghribbon a{background:#158cba;color:#fff;text-decoration:none;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}
+    #ghribbon a:hover{background:#c11;color:#fff;}#ghribbon a::before,#ghribbon a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff;}#ghribbon a::after{bottom:1px;top:auto;}
+    @media screen and (min-width:768px){#ghribbon{position:fixed;display:block;top:0;right:0;width:200px;overflow:hidden;height:200px;z-index:99999;}
+    #ghribbon a{width:200px;position:absolute;top:25px;right:-60px;transform:rotate(45deg);-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);box-shadow:4px 4px 10px rgba(0,0,0,0.8);}}
+  </style>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-00000000-0', 'auto');
+    ga('send', 'pageview');
+  </script>
+</head>
+
+<body>
+<textarea style="display:none;" toc toc-top-link>
+
+# HyperCat
+
+HyperCat is an open, lightweight JSON-based hypermedia catalogue format for exposing collections of URIs. Each HyperCat catalogue may expose any number of URIs, each with any number of RDF-like triple statements about it. HyperCat is simple to work with and allows developers to publish linked-data descriptions of resources.
+
+HyperCat is designed for exposing information about IoT assets over the web. It allows a server to provide a set of resources to a client, each with a set of semantic annotations. Implementers are free to choose or invent any set of annotations to suit their needs. A set of best practices and tools are currently under development. Where implementers choose similar or overlapping semantics, the possibilities for interoperability are increased.
+
+# Specification
+
+# Features
+
+</textarea>
+<script src="dist/strapdown.js"></script>
+</body>
+</html>
