--- a/index.html
+++ b/index.html
@@ -4,23 +4,10 @@
   <meta charset="utf-8" />
   <title>HyperCat Developer</title>
   <meta name="description" content="HyperCat IoT Developer" />
-  <style>#ghribbon a{background:#158cba;color:#fff;text-decoration:none;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}
-    #ghribbon a:hover{background:#c11;color:#fff;}#ghribbon a::before,#ghribbon a::after{content:"";width:100%;display:block;position:absolute;top:1px;left:0;height:1px;background:#fff;}#ghribbon a::after{bottom:1px;top:auto;}
-    @media screen and (min-width:768px){#ghribbon{position:fixed;display:block;top:0;right:0;width:200px;overflow:hidden;height:200px;z-index:99999;}
-    #ghribbon a{width:200px;position:absolute;top:25px;right:-60px;transform:rotate(45deg);-webkit-transform:rotate(45deg);-ms-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);box-shadow:4px 4px 10px rgba(0,0,0,0.8);}}
-  </style>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-00000000-0', 'auto');
-    ga('send', 'pageview');
-  </script>
 </head>
 
 <body>
+
 <textarea style="display:none;" toc toc-top-link>
 
 # HyperCat
@@ -29,9 +16,83 @@ HyperCat is an open, lightweight JSON-based hypermedia catalogue format for expo
 
 HyperCat is designed for exposing information about IoT assets over the web. It allows a server to provide a set of resources to a client, each with a set of semantic annotations. Implementers are free to choose or invent any set of annotations to suit their needs. A set of best practices and tools are currently under development. Where implementers choose similar or overlapping semantics, the possibilities for interoperability are increased.
 
+# Developer Community
+
+## Mailing list
+
+TBD
+
+## Github wiki
+
+TBD
+
+
 # Specification
 
-# Features
+[HyperCat 1.1 Specification](spec1.1.pdf)
+
+# Implementations
+
+## Language bindings
+
+The HyperCat specification has been used in various tools and implemented in several languages.
+
+For a summary see: https://github.com/hypercatiot
+
+### Node.js
+
+ARM R&D have contributed a Node.js module for manipulating HyperCat documents:
+
+https://github.com/HyperCatIoT/node-hypercat
+
+### Java
+
+AlertMe have contributed a Java library for manipulating HyperCat documents:
+
+https://github.com/HyperCatIoT/hypercat-java
+
+### Python
+
+1248 have contributed a Python library for manipulating HyperCat documents:
+
+https://github.com/HyperCatIoT/python-tools
+
+### PHP
+
+SenseTecnic have contributed a PHP library or manipulating HyperCat documents:
+
+https://github.com/HyperCatIoT/hypercat-php
+
+## Tools
+
+### Pathfinder
+
+Pathfinder is a reference standalone HyperCat 1.1 server implementing the API
+
+https://github.com/HyperCatIoT/pathfinder
+
+### cat-server
+
+cat-server is a simple standalone catalogue server
+
+https://github.com/HyperCatIoT/cat-server
+
+
+# Who is using HyperCat
+
+HyperCat was developed to solve a real need for interoperability amongst 8 consortia:
+
+ - DISTANCE (Internet of Schools Things) includes ScienceScope, Intel, Xively, Explorer HQ, Stakeholder Design, University of Birmingham’s Urban Climate Laboratory, UCL Centre for Advanced Spatial Analysis, and The Open University Department of Computing
+ - EyeHub includes Flexeye, Open Data Institute, Surrey University, IBM, Guildford Borough Council
+ - IoTBay: An Interoperability Hub for IoT Services (IBS), includes SH&BA, EDF, IBM, Westminster City Council, BRE
+ - i-MOVE (Internet of Moving Objects and Vehicles Ecosystem) includes Aimes Grid Services, BT, Traak, Avanti, Placr, Merseyside Transport
+ - International Airport includes LivingPlanIT, London City Airport, Milligan Retail, Critical Software, AppSherpas, HWC, CrowdVision, and ECM
+ - OpenIoT includes 1248.io, ARM, AlertMe, Enlight, Intellisense.io and Badger Pass
+ - Smart Streets includes InTouch, Carillion, BalfourBeatty, Amey, Lancaster University
+ - Stride (Smart Transport IoT Data Ecosystem) includes BT, Aimes, Ctrl-Shift, University of Cambridge, Dartt Ltd
+
+The work was funded by the UK’s Technology Strategy Board https://connect.innovateuk.org/web/internet-of-things-ecosystem-demonstrator/article-view/-/blogs/the-list-of-8-internet-of-things-clusters
+
 
 </textarea>
 <script src="dist/strapdown.js"></script>
