Mailing list link

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@ HyperCat is designed for exposing information about IoT assets over the web. It 
 
 ## Mailing list
 
+Public discussion of HyperCat takes place on the mailing list.
+
+http://groups.google.com/a/1248.io/d/forum/hypercat
+
+## Wiki
+
 TBD
-
-## Github wiki
-
-TBD
-
 
 # Specification
 
