Videos and consortium info

--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
 
 <textarea style="display:none;" toc toc-top-link>
 
+<a href="https://github.com/HyperCatIoT/HyperCatIoT.github.io"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+
+
 # HyperCat
 
 HyperCat is an open, lightweight JSON-based hypermedia catalogue format for exposing collections of URIs. Each HyperCat catalogue may expose any number of URIs, each with any number of RDF-like triple statements about it. HyperCat is simple to work with and allows developers to publish linked-data descriptions of resources.
 
 HyperCat is designed for exposing information about IoT assets over the web. It allows a server to provide a set of resources to a client, each with a set of semantic annotations. Implementers are free to choose or invent any set of annotations to suit their needs. A set of best practices and tools are currently under development. Where implementers choose similar or overlapping semantics, the possibilities for interoperability are increased.
+
+## HyperCat Consortium
+
+As of April 2015, HyperCat 2.0 is being developed by a broad consortium of companies. See http://hypercat.io for more information.
+
+## Video introductions to HyperCat
+
+ - https://www.youtube.com/watch?v=xe7WWCtEBUE
+ - https://www.youtube.com/watch?v=6Ps8iEGRi1U
 
 # Developer Community
 
@@ -23,10 +35,6 @@ HyperCat is designed for exposing information about IoT assets over the web. It 
 Public discussion of HyperCat takes place on the mailing list.
 
 http://groups.google.com/a/1248.io/d/forum/hypercat
-
-## Wiki
-
-TBD
 
 # Specification
 
